# template-python-uv

./: .gitignore  README.md  pyproject.toml  trigger_webhook.sh  webhook_payload.json
.github/: labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  pr-labeler.yml  release-drafter.yml
docs/: email_validation_guide.md
src/: README.md  cli.py  example.py  string_utils.py  validators.py
tests/: test_example.py  test_example_module.py  test_string_utils.py  test_validators.py  test_validators_edge_cases.py
